tests/cases/attributes/ok/attribute-test-panic-marker.ari
@test
fn panic_marker() {
  panic();
}
