tests/cases/attributes/errors/attribute-repr-own-tuple-field.ari
@repr(C)
struct OwnerTuple(own i64)

fn main() -> i64 {
  return 0;
}
